--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,8 @@
     "unordered_map": "cpp",
     "variant": "cpp",
     "vector": "cpp",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "fstream": "cpp",
+    "iomanip": "cpp"
   }
 }
